// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addComment happy path it adds a comment correctly 1`] = `
Object {
  "associationType": "case",
  "comment": "Wow, good luck catching that bad meanie!",
  "created_at": "2020-10-23T21:54:48.952Z",
  "created_by": Object {
    "email": "d00d@awesome.com",
    "full_name": "Awesome D00d",
    "username": "awesome",
  },
  "id": "mock-comment",
  "pushed_at": null,
  "pushed_by": null,
  "type": "user",
  "updated_at": null,
  "updated_by": null,
  "version": "WzksMV0=",
}
`;

exports[`addComment happy path it adds a comment of type alert correctly 1`] = `
Object {
  "alertId": "test-id",
  "associationType": "case",
  "created_at": "2020-10-23T21:54:48.952Z",
  "created_by": Object {
    "email": "d00d@awesome.com",
    "full_name": "Awesome D00d",
    "username": "awesome",
  },
  "id": "mock-comment",
  "index": "test-index",
  "pushed_at": null,
  "pushed_by": null,
  "type": "alert",
  "updated_at": null,
  "updated_by": null,
  "version": "WzksMV0=",
}
`;

exports[`addComment happy path it allow user to create comments without authentications 1`] = `
Object {
  "associationType": "case",
  "comment": "Wow, good luck catching that bad meanie!",
  "created_at": "2020-10-23T21:54:48.952Z",
  "created_by": Object {
    "email": null,
    "full_name": null,
    "username": null,
  },
  "id": "mock-comment",
  "pushed_at": null,
  "pushed_by": null,
  "type": "user",
  "updated_at": null,
  "updated_by": null,
  "version": "WzksMV0=",
}
`;
